Changed methods "marked for removal" & changed some @Deprecated annotations