@@ -188,7 +188,7 @@ final class JJTreeState
     ostr.println("");
     ostr.println("  public void openNodeScope(Node n) {");
     if (!JJTreeOptions.getGenerateGenerics())
-      ostr.println("    marks.add(new Integer(mk));");
+      ostr.println("    marks.add(Integer.valueOf(mk));");
     else
       ostr.println("    marks.add(mk);");
     ostr.println("    mk = sp;");
