@@ -282,10 +282,10 @@ public class Semanticize extends JavaCCGlobals {
           res.rexp.ordinal = tokenCount++;
         }
         if (!(res.rexp instanceof RJustName) && !res.rexp.label.equals("")) {
-          names_of_tokens.put(new Integer(res.rexp.ordinal), res.rexp.label);
+          names_of_tokens.put(Integer.valueOf(res.rexp.ordinal), res.rexp.label);
         }
         if (!(res.rexp instanceof RJustName)) {
-          rexps_of_tokens.put(new Integer(res.rexp.ordinal), res.rexp);
+          rexps_of_tokens.put(Integer.valueOf(res.rexp.ordinal), res.rexp);
         }
       }
     }
@@ -346,7 +346,7 @@ public class Semanticize extends JavaCCGlobals {
               jn.ordinal = tokenCount++;
               named_tokens_table.put(jn.label, jn);
               ordered_named_tokens.add(jn);
-              names_of_tokens.put(new Integer(jn.ordinal), jn.label);
+              names_of_tokens.put(Integer.valueOf(jn.ordinal), jn.label);
             } else {
               jn.ordinal = rexp.ordinal;
               prepareToRemove(respecs, res);
@@ -371,7 +371,7 @@ public class Semanticize extends JavaCCGlobals {
         List<RegExprSpec> respecs = tp.respecs;
         for (Iterator<RegExprSpec> it1 = respecs.iterator(); it1.hasNext();) {
           RegExprSpec res = (RegExprSpec)(it1.next());
-          Integer ii = new Integer(res.rexp.ordinal);
+          Integer ii = Integer.valueOf(res.rexp.ordinal);
           if (names_of_tokens.get(ii) == null) {
             JavaCCErrors.warning(res.rexp, "Unlabeled regular expression cannot be referred to by " +
                     "user generated token manager.");
